# misc

./: CMakeLists.txt  README.md  VERSION
IOer/: CMakeLists.txt  README.md  VERSION  setup.sh
IOer/examples/: example_output_t.cpp
IOer/include/: CMakeLists.txt  io_base_t.hpp  ioer.hpp  ioer_exceptions.hpp  ioer_input_util.hpp  ioer_macros.hpp  ioer_output_util.hpp  ioer_output_util_aux.hpp  ioer_var.hpp  type_traiter.hpp
IOer/include/API/: CMakeLists.txt  ioer_API.hpp
IOer/include/others/: CMakeLists.txt
IOer/ioer_test/: CMakeLists.txt  test_nonclass_func.cpp  test_read_text.cpp  test_writeread.cpp
IOer/src/: CMakeLists.txt  ioer_var.cpp
include/: CMakeLists.txt  MPIer.hpp  a.out  basic_functions.hpp  boris_integrator.hpp  crasher.hpp  fermi.hpp  fft.hpp  fmtstring.hpp  label_index_convertor.hpp  lorentian.hpp  matrixop.hpp  matrixop_config.hpp  matrixop_eigen.hpp  matrixop_io.hpp  matrixop_lapack.hpp  matrixop_lapack_base.hpp  matrixop_mkl.hpp  matrixop_mkl_arithmetic.hpp  positive_mod.hpp  randomer.hpp  sgn.hpp  sparsemat.hpp  stats.hpp  test_matrixop_lapack.cpp  timer.hpp  type_traiter.hpp  types.hpp  vector.hpp  vector_mkl.hpp
include/IOer/: 1.cpp  CMakeLists.txt  a.out  hdf5_io_mgr.hpp  io_pathtracker.hpp  ioer.hpp  ioer_exceptions.hpp  ioer_h5file_util.hpp  ioer_input_util.hpp  ioer_macros.hpp  ioer_output_util.hpp  ioer_output_util_aux.hpp  stream_io_mgr.hpp
include/MatrixOp/: 1.cpp  CMakeLists.txt  README.md  a.out  adjoint.hpp  anticommutator.hpp  commutator.hpp  determinant.hpp  diag.hpp  dot.hpp  eig.hpp  eigh.hpp  eye.hpp  hdiag.hpp  inv.hpp  inverse.hpp  logm.hpp  lowdin.hpp  matCmat.hpp  matCmatC.hpp  matCvec.hpp  matmat.hpp  matmatC.hpp  matrixop.hpp  matrixop_config.hpp  matvec.hpp  mpower.hpp  nrm.hpp  octave-workspace  scal.hpp  solve.hpp  test.cpp  trace.hpp  util.hpp  zeros.hpp
misc_test/: CMakeLists.txt  gen_var.py  test_ioer_dummy.cpp  test_ioer_hdf5.cpp  test_ioer_info.cpp  test_ioer_info_tabout.cpp  test_ioer_keyval.cpp  test_ioer_nonclass_func.cpp  test_ioer_tabout.cpp  test_ioer_writeread.cpp  test_ioer_writeread_text.cpp  test_positive_mod.cpp  test_sgn.cpp
