FILE(GLOB SOURCES *.cpp)

FOREACH(SRC ${SOURCES})
	GET_FILENAME_COMPONENT(TESTNAME ${SRC} NAME_WE)
	ADD_EXECUTABLE(${TESTNAME} ${SRC})
	SET_TARGET_PROPERTIES(${TESTNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
	IF(WITH_HDF5)
		TARGET_LINK_LIBRARIES(${TESTNAME} PUBLIC ${HDF5_CXX_LIBRARIES})
	ENDIF(WITH_HDF5)
	ADD_TEST(${TESTNAME} ${CMAKE_BINARY_DIR}/test/${TESTNAME})
ENDFOREACH()

FILE(GLOB INPUTS *.in)
FILE(COPY ${INPUTS}
        DESTINATION ${CMAKE_BINARY_DIR}/test)
