FILE(GLOB SOURCES *.cpp)

FOREACH(SRC ${SOURCES})
	GET_FILENAME_COMPONENT(TESTNAME ${SRC} NAME_WE)
	ADD_EXECUTABLE(${TESTNAME} ${SRC})
	SET_TARGET_PROPERTIES(${TESTNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
	TARGET_LINK_LIBRARIES(${TESTNAME} PUBLIC ioer)
	ADD_TEST(${TESTNAME} ${CMAKE_BINARY_DIR}/test/${TESTNAME})
ENDFOREACH()
