SET(OBJNAME ioer)
SET(OBJNAME_STATIC ${OBJNAME}_static)

FILE(GLOB ${OBJNAME}_SRC *.cpp)
ADD_LIBRARY(${OBJNAME} SHARED ${${OBJNAME}_SRC})

# static lib
ADD_LIBRARY(${OBJNAME_STATIC} STATIC ${${OBJNAME}_SRC})
SET_TARGET_PROPERTIES(${OBJNAME_STATIC} 
						PROPERTIES 
						OUTPUT_NAME ${OBJNAME})


INSTALL(TARGETS ${OBJNAME} ${OBJNAME_STATIC}
	    LIBRARY DESTINATION lib
		ARCHIVE DESTINATION lib)
